# hermes-rs

./: .gitignore  Cargo.toml  README.md  implementation_plan.md  install.sh  package-lock.json  package.json  task.md  walkthrough.md
.github/workflows/: ci.yml
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.js
apps/dashboard/src/: App.jsx  style.css
apps/dashboard/src/views/: ChatView.jsx  ConfigView.jsx  MCPView.jsx  ModelView.jsx  PluginsView.jsx  SkillsView.jsx  ToolsView.jsx
apps/example-plugin/src/: lib.rs
apps/web-app/: index.html  package-lock.json  package.json  vite.config.js
apps/web-app/public/: manifest.webmanifest
apps/web-app/scripts/: verify-seo.js
apps/web-app/src/: data.json  main.js  style.css
athena-agent/: Cargo.toml
athena-agent/src/: agent.rs  agent_tests.rs  budget.rs  builder.rs  config.rs  context.rs  lib.rs  messages.rs
athena-browser/: Cargo.toml
athena-browser/src/: browser.rs  computer.rs  lib.rs
athena-cli/: Cargo.toml
athena-cli/src/: interactive.rs  main.rs  main_tests.rs
athena-cli/src/commands/: acp.rs  auth.rs  backup.rs  checkpoints.rs  claw.rs  completion.rs  computer_use.rs  config.rs  cron.rs  curator.rs  dashboard.rs  debug.rs  doctor.rs  dump.rs  fallback.rs  gateway.rs  hooks.rs  import.rs  insights.rs  kanban.rs  login.rs  logs.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  model.rs  pairing.rs  plugins.rs  profile.rs  sessions.rs  setup.rs  skills.rs  slack.rs  status.rs  tools.rs  uninstall.rs  update.rs  version.rs  webhook.rs  (+1 more)
athena-core/: Cargo.toml
athena-core/src/: config.rs  lib.rs  logging.rs  paths.rs
athena-env/: Cargo.toml
athena-env/src/: docker.rs  lib.rs  modal.rs  ssh.rs  traits.rs
athena-gateway/: Cargo.toml
athena-gateway/src/: main.rs
athena-mcp/: Cargo.toml
athena-mcp/src/: client.rs  lib.rs  server.rs  types.rs
athena-multimedia/: Cargo.toml
athena-multimedia/src/: audio.rs  lib.rs  vision.rs
athena-plugins/: Cargo.toml
athena-plugins/src/: host.rs  lib.rs  manager.rs
athena-providers/: Cargo.toml
athena-providers/src/: base.rs  error.rs  lib.rs  registry.rs
athena-providers/src/providers/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  xai.rs
athena-skills/: Cargo.toml
athena-skills/src/: lib.rs  manager.rs  store.rs  test_manager.rs
athena-state/: Cargo.toml
athena-state/src/: db.rs  lib.rs
athena-tools/: Cargo.toml
athena-tools/src/: code_tool.rs  file_tools.rs  lib.rs  patch_tool.rs  registry.rs  registry_tests.rs  terminal_tool.rs  web_tools.rs
athena-tui-gateway/: Cargo.toml
athena-tui-gateway/src/: main.rs
hermes-agent/: Cargo.toml
hermes-agent/src/: agent.rs  agent_tests.rs  builder.rs  lib.rs
hermes-browser/: Cargo.toml
hermes-browser/src/: browser.rs  computer.rs  lib.rs
hermes-cli/: Cargo.toml
hermes-cli/src/: interactive.rs  main.rs
hermes-cli/src/commands/: auth.rs  backup.rs  checkpoints.rs  claw.rs  computer_use.rs  config.rs  cron.rs  curator.rs  dashboard.rs  debug.rs  doctor.rs  dump.rs  fallback.rs  gateway.rs  hooks.rs  import.rs  insights.rs  kanban.rs  login.rs  logs.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  model.rs  pairing.rs  plugins.rs  profile.rs  sessions.rs  setup.rs  skills.rs  slack.rs  status.rs  tools.rs  uninstall.rs  webhook.rs  whatsapp.rs
hermes-core/: Cargo.toml
hermes-core/src/: config.rs  logging.rs  paths.rs
hermes-env/: Cargo.toml
hermes-env/src/: docker.rs  modal.rs
hermes-gateway/: Cargo.toml
hermes-gateway/src/: main.rs
hermes-mcp/: Cargo.toml
hermes-mcp/src/: client.rs  server.rs
hermes-multimedia/: Cargo.toml
hermes-multimedia/src/: vision.rs
hermes-plugins/: Cargo.toml
hermes-plugins/src/: host.rs  lib.rs  manager.rs
hermes-providers/: Cargo.toml
hermes-providers/src/: base.rs  error.rs  lib.rs  registry.rs
hermes-providers/src/providers/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  xai.rs
hermes-skills/: Cargo.toml
hermes-skills/src/: store.rs
hermes-state/: Cargo.toml
hermes-state/src/: db.rs
hermes-tools/: Cargo.toml
hermes-tools/src/: code_tool.rs  file_tools.rs  patch_tool.rs  registry.rs  registry_tests.rs  terminal_tool.rs  web_tools.rs
hermes-tui-gateway/: Cargo.toml
hermes-tui-gateway/src/: main.rs
scripts/: setup-app.js
