[workspace]
members = [
    "athena-core",
    "athena-state",
    "athena-tools",
    "athena-providers",
    "athena-agent",
    "athena-cli",
    "athena-gateway",
    "athena-tui-gateway",
    "athena-env",
    "athena-mcp",
    "athena-plugins",
    "athena-skills",
    "athena-browser",
    "athena-multimedia"
]
resolver = "2"
