[package]
name = "athena-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tiktoken-rs = "0.5"
async-trait = "0.1.74"
futures = "0.3"
athena-core = { path = "../athena-core" }
athena-state = { path = "../athena-state" }
athena-tools = { path = "../athena-tools" }
athena-providers = { path = "../athena-providers" }

[dev-dependencies]
wiremock = "0.6"


