[package]
name = "athena-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
athena-core = { path = "../athena-core" }
athena-agent = { path = "../athena-agent" }
athena-tools = { path = "../athena-tools" }
tracing = "0.1"
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
dotenvy = "0.15"
athena-providers = { version = "0.1.0", path = "../athena-providers" }
tokio-cron-scheduler = "0.15.1"
