[package]
name = "athena-multimedia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

athena-tools = { path = "../athena-tools" }
[dev-dependencies]
wiremock = "0.6"
uuid = { version = "1.0", features = ["v4"] }
