[package]
name = "athena-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

# Wasmtime for WebAssembly plugin execution
wasmtime = "19.0.0"
wasmtime-wasi = "19.0.0"

# Workspace dependencies
athena-tools = { path = "../athena-tools" }
athena-core = { path = "../athena-core" }
