[package]
name = "athena-tui-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full", "io-util", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
athena-agent = { path = "../athena-agent" }
athena-tools = { path = "../athena-tools" }
athena-core = { path = "../athena-core" }
tracing = "0.1"
dotenvy = "0.15"
athena-providers = { version = "0.1.0", path = "../athena-providers" }
