[package]
name = "hermes-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tiktoken-rs = "0.5"
async-trait = "0.1.74"
async-openai = { version = "0.18", default-features = false, features = ["rustls"] }
futures = "0.3"
hermes-core = { path = "../hermes-core" }
hermes-state = { path = "../hermes-state" }
hermes-tools = { path = "../hermes-tools" }

[[test]]
name = "agent_tests"
path = "src/agent_tests.rs"
