[package]
name = "hermes-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
hermes-core = { path = "../hermes-core" }
hermes-agent = { path = "../hermes-agent" }
hermes-tools = { path = "../hermes-tools" }
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
indicatif = "0.17"
tracing = "0.1"
dotenvy = "0.15"
