[package]
name = "hermes-env"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.16" # Docker API client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } # For Modal/Remote
russh = "0.40" # Async SSH client
russh-keys = "0.40"
futures-util = "0.3"
base64 = "0.22"
tracing = "0.1"

