[package]
name = "hermes-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
hermes-core = { path = "../hermes-core" }
hermes-agent = { path = "../hermes-agent" }
hermes-tools = { path = "../hermes-tools" }
tracing = "0.1"
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
dotenvy = "0.15"
