[package]
name = "hermes-providers"
version = "0.1.0"
edition = "2021"
[dependencies]
async-openai = { version = "0.20", default-features = false, features = ["rustls"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
lazy_static = "1.4"
url = "2.0"
