[package]
name = "hermes-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
fastembed = "3.8" # For local ONNX semantic embedding
ort-sys = { version = "=2.0.0-rc.4" }
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
anyhow = "1.0"



