[package]
name = "hermes-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3"
async-trait = "0.1.74"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
hermes-core = { path = "../hermes-core" }
