[package]
name = "hermes-tui-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full", "io-util", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hermes-agent = { path = "../hermes-agent" }
hermes-tools = { path = "../hermes-tools" }
hermes-core = { path = "../hermes-core" }
tracing = "0.1"
dotenvy = "0.15"
